--- a/FOJ.App/bower.json
+++ b/FOJ.App/bower.json
@@ -14,7 +14,8 @@
     "angularfire": "^2.1.0",
     "angular-bootstrap": "^2.2.0",
     "angulartics-google-analytics": "^0.3.0",
-    "angular-loading-bar": "^0.9.0"
+    "angular-loading-bar": "^0.9.0",
+    "angular-trix": "^1.0.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0",
